chore: fix spacing between search and results

--- a/src/components/GlobalSearch/global-search.scss
+++ b/src/components/GlobalSearch/global-search.scss
@@ -59,7 +59,7 @@
     background-color: $inverse-01;
     border-radius: 0;
     box-shadow: 0 2px 6px rgba($overlay-01, 0.2);
-    margin-top: $spacing-md;
+    margin-top: $spacing-xs;
   }
 
   /* Menu Top Arrow & Vertical Dividers */
